--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,6 @@
 
       <!-- Контент -->
     </main>
-    <script src="../src/main.js"></script>
   </body>
-  <script src="../src/main.js"></script>
+  <script src="./bundle.js"></script>
 </html>
